--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <title>Professor Gianluca site oficial</title>
 </head>
 <body>
@@ -57,10 +58,14 @@
         </details>
     <div>
     <h2 class="final">Entre em contato e saiba mais!</h2>
-    <a href="https://wa.me/5521966466052?text=Ol%C3%A1%20querido%20aluno!%20Como%20posso%20te%20ajudar%3F" target="_blank">
-    <button>Entre em contato!</button>
+    <a href="https://wa.me/5521966466052?text=" target="_blank">
+    <button>
+    <span class="material-symbols-outlined">phone_forwarded</span>
+    Entre em contato!
+    </button>
     </a>
     </div>
     </main> 
 </body>
 </html>
+
